Novos arquivos da API

--- a/services/ms-nlp-processor/.env.example
+++ b/services/ms-nlp-processor/.env.example
@@ -23,3 +23,14 @@ SERVICE_PORT=8000
 
 # LLM Configuration (optional)
 PREFERRED_LLM_PROVIDER=openai  # openai, gemini, claude
+
+# Google OAuth Configuration
+GOOGLE_CLIENT_ID="your_google_client_id"
+GOOGLE_CLIENT_SECRET="your_google_client_secret"
+
+# JWT Secret Key
+JWT_SECRET_KEY="a-very-secret-key-that-you-should-change"
+
+# Apple OAuth Configuration
+APPLE_CLIENT_ID="your_apple_client_id"
+APPLE_CLIENT_SECRET="your_apple_client_secret"
