--- a/services/ms-nlp-processor/requirements.txt
+++ b/services/ms-nlp-processor/requirements.txt
@@ -4,10 +4,13 @@ langchain
 langchain-openai
 langchain-google-genai
 langchain-anthropic
+langchain-google-community[gmail]
 langgraph
 openai
 google-generativeai
 anthropic
+pytest
+pytest-asyncio
 annotated-doc==0.0.4
 annotated-types==0.7.0
 anyio==4.11.0
@@ -32,3 +35,5 @@ starlette==0.50.0
 typing-inspection==0.4.2
 typing_extensions==4.15.0
 uvicorn==0.38.0
+sqlalchemy
+authlib
